--- a/Samples/nuget.config
+++ b/Samples/nuget.config
@@ -6,10 +6,7 @@
   </config>
   <packageSources>
     <clear />
-    <!-- add key="nuget" value="https://api.nuget.org/v3/index.json" / -->
-    <add key="tps" value="https://skype.pkgs.visualstudio.com/_packaging/tps/nuget/v3/index.json" />
-
-    <!-- add key="partners" value="http://partnernugetserver.azurewebsites.net/nuget" /-->
-    <add key="csc" value="https://skype.pkgs.visualstudio.com/_packaging/csc/nuget/v3/index.json" />
+    <add key="nuget" value="https://api.nuget.org/v3/index.json" />
+    <add key="partners" value="http://partnernugetserver.azurewebsites.net/nuget" />
   </packageSources>
 </configuration>
