--- a/Samples/LocalMediaSamples/HueBot/HueBot/HueBot.csproj
+++ b/Samples/LocalMediaSamples/HueBot/HueBot/HueBot.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net462</TargetFramework>
@@ -16,12 +16,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Server.HttpSys" Version="2.1.1" />
+    <PackageReference Include="Microsoft.$(PkgPrefix)Graph.Calls.Media" Version="201809.1.3" />
     <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.HttpSys" Version="3.2.176" />
     <!-- Although Bots.Media is implicitly imported by Calls.Media, this library requires an explicit reference for
     some scripts included within the nuget package. -->
     <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.9.0.146-alpha" />
-    <PackageReference Include="Microsoft.Skype.Graph.Calls.Media" Version="201809.1.3" />
-    <PackageReference Include="Microsoft.Skype.Graph.Meetings" Version="201809.1.3" />
+    <PackageReference Include="Microsoft.$(PkgPrefix)Graph.Meetings" Version="201809.1.3" />
     <ProjectReference Include="..\..\..\Common\Sample.Common\Sample.Common.csproj" />
   </ItemGroup>
 
