--- a/Samples/Common/Sample.Common/Sample.Common.csproj
+++ b/Samples/Common/Sample.Common/Sample.Common.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net461</TargetFramework>
@@ -12,8 +12,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.6" />
-        <PackageReference Include="Microsoft.$(PkgPrefix)Graph.CoreSDK" version="201809.1.3" />
-        <PackageReference Include="Microsoft.$(PkgPrefix)Graph.StatefulClient" Version="201809.1.3" />
+        <PackageReference Include="Microsoft.$(PkgPrefix)Graph.CoreSDK" version="1.0.0.12" />
+        <PackageReference Include="Microsoft.$(PkgPrefix)Graph.StatefulClient" Version="1.0.0.12" />
         <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.19.8" />
         <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="5.2.4" />
         <Reference Include="System.Data" />
