--- a/Samples/LocalMediaSamples/AudioVideoPlaybackBot/FrontEnd/FrontEnd.csproj
+++ b/Samples/LocalMediaSamples/AudioVideoPlaybackBot/FrontEnd/FrontEnd.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\Graph.props" />
@@ -61,7 +61,7 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.6" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.6" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
-    <PackageReference Include="Microsoft.$(PkgPrefix)Graph.Calls.Media" Version="201809.1.3" />
+    <PackageReference Include="Microsoft.$(PkgPrefix)Graph.Calls.Media" Version="1.0.0.12" />
     <PackageReference Include="Microsoft.Owin" Version="4.0.0" />
     <PackageReference Include="Microsoft.Owin.Hosting" Version="4.0.0" />
     <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.9.0.146-alpha" />
