--- a/Samples/RemoteMediaSamples/IncidentBot/IncidentBot.csproj
+++ b/Samples/RemoteMediaSamples/IncidentBot/IncidentBot.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net471</TargetFramework>
@@ -24,7 +24,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.WebApiCompatShim" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="2.1.1" />
-    <PackageReference Include="Microsoft.$(PkgPrefix)Graph.Calls" Version="201809.1.3" />
+    <PackageReference Include="Microsoft.$(PkgPrefix)Graph.Calls" Version="1.0.0.12" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
     <Reference Include="System.Net.Http" />
   </ItemGroup>
