--- a/Samples/StatelessSamples/OnlineMeetingSamples/OnlineMeeting.csproj
+++ b/Samples/StatelessSamples/OnlineMeetingSamples/OnlineMeeting.csproj
@@ -9,7 +9,7 @@
   <Import Project="$(MSBuildThisFileDirectory)..\..\Graph.props" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.$(PkgPrefix)Graph.CoreSDK" Version="1.0.0.12" />
+    <PackageReference Include="Microsoft.Graph.CoreSDK" Version="1.0.0-prerelease.48" />
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.19.8" />
   </ItemGroup>
 
