Move to /beta endpoint

--- a/Samples/LocalMediaSamples/AudioVideoPlaybackBot/WorkerRole/app.config
+++ b/Samples/LocalMediaSamples/AudioVideoPlaybackBot/WorkerRole/app.config
@@ -77,6 +77,6 @@
     <add key="H264_320x180_15Fps" value="output180p.264" />
     <add key="AudioFileLocation" value="downsampled.wav" />
     <add key="AudioVideoFileLengthInSec" value="70" />
-    <add key="PlaceCallEndpointUrl" value="https://graph.microsoft.com/teamsBeta" />
+    <add key="PlaceCallEndpointUrl" value="https://graph.microsoft.com/beta" />
   </appSettings>
 </configuration>
