--- a/Samples/LocalMediaSamples/HueBot/HueBot/appsettings.json
+++ b/Samples/LocalMediaSamples/HueBot/HueBot/appsettings.json
@@ -13,6 +13,6 @@
     "BotBaseUrl": "https://huebotsf02.westus.cloudapp.azure.com:9443/api/calls",
     "BotMediaProcessorUrl": "net.tcp://huebotsf02.westus.cloudapp.azure.com:8000",
     "Certificate": "ABC0000000000000000000000000000000000CBA",
-    "PlaceCallEndpointUrl": "https://graph.microsoft.com/teamsBeta"
+    "PlaceCallEndpointUrl": "https://graph.microsoft.com/beta"
   }
 }
