--- a/Samples/RemoteMediaSamples/IncidentBot/appsettings.json
+++ b/Samples/RemoteMediaSamples/IncidentBot/appsettings.json
@@ -18,7 +18,7 @@
   "Bot": {
     "AppId": "00000000-0000-0000-0000-000000000000",
     "AppSecret": "__placeholder__",
-    "PlaceCallEndpointUrl": "https://graph.microsoft.com/teamsBeta",
+    "PlaceCallEndpointUrl": "https://graph.microsoft.com/beta",
     "BotBaseUrl": "https://incidentbot.contoso.com"
   }
 }
