--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
   "homepages": [],
-  "source_base_path": "C:/src/service-shared_platform_samples/docfx",
+  "source_base_path": "C:/Dev/service-shared_platform_samples/docfx",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -54,7 +54,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/calls/IVR.html",
-          "hash": "4fQLC4n3nveNI4Qn4SXqdg=="
+          "hash": "jcmUgqXVzEX+LfNN2FsKfw=="
         }
       },
       "is_incremental": false,
@@ -1326,7 +1326,7 @@
       "output": {
         ".html": {
           "relative_path": "client/Microsoft.Graph.Communications.Client.Transport.GraphClientWrapper.html",
-          "hash": "WSqxN1D4wI/+LNW1wSNl6g=="
+          "hash": "2MKsH6yvRN8X5RCXWurNGw=="
         }
       },
       "is_incremental": false,
@@ -1434,7 +1434,7 @@
       "output": {
         ".html": {
           "relative_path": "client/Microsoft.Graph.Communications.Resources.IResource-2.html",
-          "hash": "T9pIxHB4tILwKJMpFpZiaA=="
+          "hash": "i68Heyyht8B/D+HREiBhCQ=="
         }
       },
       "is_incremental": false,
@@ -1446,7 +1446,7 @@
       "output": {
         ".html": {
           "relative_path": "client/Microsoft.Graph.Communications.Resources.IResource.html",
-          "hash": "WoMLuFLZO+GhHKBJNBQg2g=="
+          "hash": "V5qpF2OTiOrKtX9H5+tcYw=="
         }
       },
       "is_incremental": false,
@@ -1458,7 +1458,7 @@
       "output": {
         ".html": {
           "relative_path": "client/Microsoft.Graph.Communications.Resources.IResourceBase.html",
-          "hash": "F8zP3y8yfpxTwMrAxBL4rQ=="
+          "hash": "R+/LjujOh/rtI+SMAV5ZoA=="
         }
       },
       "is_incremental": false,
@@ -1470,7 +1470,7 @@
       "output": {
         ".html": {
           "relative_path": "client/Microsoft.Graph.Communications.Resources.IResourceCollection-3.html",
-          "hash": "MxckoiNaZwm7xMCFolqmPw=="
+          "hash": "K1+T25a5DP+GIq+U0ok87A=="
         }
       },
       "is_incremental": false,
@@ -1482,7 +1482,7 @@
       "output": {
         ".html": {
           "relative_path": "client/Microsoft.Graph.Communications.Resources.IResourceCollection.html",
-          "hash": "01Avt8TTqYzhIY/QbaBExA=="
+          "hash": "M4E4KLGiXXQJje88jIO3mg=="
         }
       },
       "is_incremental": false,
@@ -1494,7 +1494,7 @@
       "output": {
         ".html": {
           "relative_path": "client/Microsoft.Graph.Communications.Resources.ResourceEventArgs-1.html",
-          "hash": "gqbL7W8L9x2SjNS+hOjIwg=="
+          "hash": "vQ+roPVVt+bBtOaCUSR9OQ=="
         }
       },
       "is_incremental": false,
@@ -1506,7 +1506,7 @@
       "output": {
         ".html": {
           "relative_path": "client/Microsoft.Graph.Communications.Resources.ResourceEventHandler-2.html",
-          "hash": "FNJSq9xtza+W4R6V8C5BjA=="
+          "hash": "dmScYP+xP7HpOptocmZPDg=="
         }
       },
       "is_incremental": false,
@@ -1626,7 +1626,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.CollectionUtils.html",
-          "hash": "4IoyPLw+9hk1uNrMQj/LAg=="
+          "hash": "PsTh4A7tnxZSK5I99cqyXA=="
         }
       },
       "is_incremental": false,
@@ -1650,7 +1650,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.EnumUtils.html",
-          "hash": "3jqkWfcZs0F1QC3HgNOoBg=="
+          "hash": "qeqpxNSHgRz0RRoBTVNpuw=="
         }
       },
       "is_incremental": false,
@@ -1722,7 +1722,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Extensions.html",
-          "hash": "HI+xSzkuMs6ELJO/fBg6TA=="
+          "hash": "4Tj0oHs/Iog90PlQr+JRNw=="
         }
       },
       "is_incremental": false,
@@ -1758,7 +1758,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.HttpConstants.HeaderNames.html",
-          "hash": "7ylHaDuwn0DCwEHQIMCzCg=="
+          "hash": "TCgdVaMqs2HlSZ5R5Eh9Eg=="
         }
       },
       "is_incremental": false,
@@ -2010,7 +2010,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.StateMachine-1.html",
-          "hash": "7w3MxpiILl0urK/OB+GI5w=="
+          "hash": "9SemIRtd1cTonN0zRfJXiw=="
         }
       },
       "is_incremental": false,
@@ -2070,7 +2070,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Telemetry.ClientEtwLogger.html",
-          "hash": "SoxunfemyhtQubop3j5GlA=="
+          "hash": "fgsp41FPvyHTFke/d5jdRw=="
         }
       },
       "is_incremental": false,
@@ -2370,7 +2370,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Telemetry.LoggingConstants.html",
-          "hash": "8GfKIkl0FyuTvYruHksqvQ=="
+          "hash": "uwAZWCwfVU9vd3aqabl5eg=="
         }
       },
       "is_incremental": false,
@@ -2382,7 +2382,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Telemetry.LoggingExtensions.html",
-          "hash": "6kRNSKEBwlZsq46aot9Qww=="
+          "hash": "7W29i5eywb+NLqGQMjODKQ=="
         }
       },
       "is_incremental": false,
@@ -2562,7 +2562,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Transport.Extensions.GraphRequestExtensions.html",
-          "hash": "VToMUN16Va/WQBBLGDoKpw=="
+          "hash": "m8VeGNjx3MeRqR8Uc3EMbQ=="
         }
       },
       "is_incremental": false,
@@ -2586,7 +2586,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Transport.Extensions.HttpResponseMessageExtensions.html",
-          "hash": "fa5z9ESwz1OGaqp9X+Vm7A=="
+          "hash": "JbrcbB76XNHewlSe5s3TTA=="
         }
       },
       "is_incremental": false,
@@ -2610,7 +2610,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Transport.GraphHttpClient.html",
-          "hash": "y1Yxl3AzM+nWLzBC01G6kw=="
+          "hash": "wQtyCSYyVqIITLsyrGafFw=="
         }
       },
       "is_incremental": false,
@@ -2622,7 +2622,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Transport.GraphHttpClientContainer.html",
-          "hash": "y3e7SeVYGlk4UZztJiQmeQ=="
+          "hash": "GZWaqUu3vbpd6qjFkazYnw=="
         }
       },
       "is_incremental": false,
@@ -2646,7 +2646,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Transport.GraphRequest-1.html",
-          "hash": "HhscmQoMHrLwdkRJ9rts1A=="
+          "hash": "va6yTB87XMBfLEiwsvcYwg=="
         }
       },
       "is_incremental": false,
@@ -2658,7 +2658,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Transport.GraphRequest.html",
-          "hash": "t3opm5OTzVREASlmc/ddzw=="
+          "hash": "u50+U5PzKFDj0zm5LZC1EQ=="
         }
       },
       "is_incremental": false,
@@ -2730,7 +2730,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Transport.IGraphClient.html",
-          "hash": "tY/MRigubdE+b2o3DAw36A=="
+          "hash": "T8+3DlK6BUKIfQK+7GPfVA=="
         }
       },
       "is_incremental": false,
@@ -2862,7 +2862,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Utilities.html",
-          "hash": "09a4a20oZgd8Iupyn9CDbg=="
+          "hash": "wN4XLJvIWgQ9bWxjGTB/xQ=="
         }
       },
       "is_incremental": false,
@@ -2874,7 +2874,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.Validator.html",
-          "hash": "ZGwhOQXAwN/+vyLIuTkKdw=="
+          "hash": "P5ssUdTvrnCsjJQ2W0hpOA=="
         }
       },
       "is_incremental": false,
@@ -2886,7 +2886,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.WeakKey-1.html",
-          "hash": "diO6fXsQmZsZmhYT5+kv4g=="
+          "hash": "Tj5I3TI3dW4MNhX/2JlG3w=="
         }
       },
       "is_incremental": false,
@@ -2898,7 +2898,7 @@
       "output": {
         ".html": {
           "relative_path": "common/Microsoft.Graph.Communications.Common.WeakKeyDictionary-2.html",
-          "hash": "KTSFoUBKRKmh1agZl4z0Tw=="
+          "hash": "gTQnJfRz/YNYGyPTaBSytA=="
         }
       },
       "is_incremental": false,
@@ -8437,18 +8437,6 @@
       "version": ""
     },
     {
-      "type": "Conceptual",
-      "source_relative_path": "release-notes.md",
-      "output": {
-        ".html": {
-          "relative_path": "release-notes.html",
-          "hash": "rRaT8A8Tl4Oc2CiJWuPcKQ=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
       "type": "Resource",
       "source_relative_path": "resources/azure-application-properties.png",
       "output": {
@@ -8508,26 +8496,27 @@
   "incremental_info": [
     {
       "status": {
-        "can_incremental": true,
+        "can_incremental": false,
+        "details": "Cannot build incrementally because last build info is missing.",
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "ConceptualDocumentProcessor": {
-          "can_incremental": true,
+        "ManagedReferenceDocumentProcessor": {
+          "can_incremental": false,
           "incrementalPhase": "build"
         },
-        "ManagedReferenceDocumentProcessor": {
-          "can_incremental": true,
+        "ConceptualDocumentProcessor": {
+          "can_incremental": false,
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
