Fixes to hue bot.

--- a/Samples/V1.0Samples/LocalMediaSamples/HueBot/HueBot/appsettings.json
+++ b/Samples/V1.0Samples/LocalMediaSamples/HueBot/HueBot/appsettings.json
@@ -10,8 +10,8 @@
   "Bot": {
     "AppId": "%AppId%",
     "AppSecret": "%AppSecret%",
-    "BotBaseUrl": "https://huebotsxxxxx.xxxx.cloudapp.azure.com:9444/api/calls",
-    "BotMediaProcessorUrl": "net.tcp://huebotsxxxxx.xxxx.cloudapp.azure.com:8445",
+    "BotBaseUrl": "https://%CName%:9444/api/calls",
+    "BotMediaProcessorUrl": "net.tcp://%ServiceDns%:8445",
     "Certificate": "ABC0000000000000000000000000000000000CBA",
     "PlaceCallEndpointUrl": "https://graph.microsoft.com/beta"
   }
