--- a/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/WorkerRole/app.config
+++ b/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/WorkerRole/app.config
@@ -75,7 +75,7 @@
 
   <appSettings>
     <!-- update these with your Bot Id, AAD application id and your AAD application secret from your bot registration portal. -->
-    <add key="BotId" value="%BotId%" />
+    <add key="BotName" value="%BotName%" />
     <add key="AadAppId" value="%AppId%" />
     <add key="AadAppSecret" value="%AppSecret%" />
     <add key="H264_1280x720_30Fps" value="output720p.264" />
