--- a/Samples/BetaSamples/LocalMediaSamples/ComplianceRecordingBot/WorkerRole/app.config
+++ b/Samples/BetaSamples/LocalMediaSamples/ComplianceRecordingBot/WorkerRole/app.config
@@ -75,9 +75,9 @@
 
   <appSettings>
     <!-- update these with your Bot Id, AAD application id and your AAD application secret from your bot registration portal. -->
-    <add key="BotName" value="MattE2ETestBot1" />
-    <add key="AadAppId" value="20526fdc-cdea-49a3-97e2-dd20b002dd8f" />
-    <add key="AadAppSecret" value="JRyf?/HKQPBeDZcQ[U0Z/rVKWYaFE805" />
+    <add key="BotName" value="%BotName%" />
+    <add key="AadAppId" value="%AppId%" />
+    <add key="AadAppSecret" value="%AppSecret%" />
     <add key="PlaceCallEndpointUrl" value="https://graph.microsoft.com/beta" />
   </appSettings>
 </configuration>
