update to latest samples

--- a/Samples/V1.0Samples/StatelessSamples/SimpleIvrBot/appsettings.json
+++ b/Samples/V1.0Samples/StatelessSamples/SimpleIvrBot/appsettings.json
@@ -11,7 +11,7 @@
     "AppId": "%AppId%",
     "AppSecret": "%AppSecret%",
     "PlaceCallEndpointUrl": "https://graph.microsoft.com/v1.0",
-    "BotBaseUrl": "%BotBaseUrl%"
+    "BotBaseUrl": "%ServiceDns%"
   },
   "objectIds": {
     "First": "%objectId-1%",
