--- a/Samples/V1.0Samples/LocalMediaSamples/HueBot/HueBot/HueBot.csproj
+++ b/Samples/V1.0Samples/LocalMediaSamples/HueBot/HueBot/HueBot.csproj
@@ -19,8 +19,8 @@
     <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.HttpSys" Version="3.2.176" />
     <!-- Although Bots.Media is implicitly imported by Calls.Media, this library requires an explicit reference for
     some scripts included within the nuget package. -->
-    <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.14.1.234-alpha" />
-    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.1" />
+    <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.17.0.39-alpha" />
+    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.791" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,7 +35,10 @@
 
   <ItemGroup>
     <None Update="Startup.cmd">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="VC_redist.x64.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
